eliminate Applet and AppletFrame, retain class and variable names I don't think this class has been used, but may need further works